--- a/app/view/delete/deleteAutorizacao.html
+++ b/app/view/delete/deleteAutorizacao.html
@@ -17,12 +17,12 @@
         <p>Data de validade: <input type="text" name="data" value={{Data}} disabled> </p>
         <p>Hora de validade: <input type="text" name="hora" value={{Hora_final}} disabled> </p>
 
-        <p>Observações: </p>
-        <textarea rows="3" cols="50" disabled>{{Obs}}</textarea>
+        <label for="senha">Senha:</label>
+        <input type="text" id="senha" name="senha" value="{{Senha}}" disabled>
         <br>
 
-        <p>Cartão RFID: </p>
-        <input type="text" name="rfid" value="{{Rfid}}" disabled>
+        <p>Observações: </p>
+        <textarea rows="3" cols="50" disabled>{{Obs}}</textarea>
 
         <br>
         <br>
