--- a/app/view/edit/editAutorizacao.html
+++ b/app/view/edit/editAutorizacao.html
@@ -25,13 +25,13 @@
         <p>Data de validade: <input id="datepicker" type="text" name="data" value={{Data_validade}} autocomplete="off" required> </p>
         <p>Hora de validade: <input id="timepicker" type="text" name="hora" value={{Hora_inicial}} required> </p>
 
-        <p>Observações: </p>
-        <textarea name="obs" rows="3" cols="50">{{Obs}}</textarea>
+        <label for="senha"></label>
+        <input type="password" id="senha" name="senha" value="{{Senha}}" required>
+
         <br>
 
-        <p>Cartão RFID: </p>
-        <input type="text" name="rfid" value="{{Rfid}}">
-
+        <p>Observações: </p>
+        <textarea name="obs" rows="3" cols="50">{{Obs}}</textarea>
         <br>
         <br>
 
