--- a/app/view/add/addAutorizacao.html
+++ b/app/view/add/addAutorizacao.html
@@ -27,22 +27,14 @@
         <p>Hora de validade: <input id="timepicker" type="text" name="hora" required>
         <output></output> </p>
 
+        <label for="senha">Senha:</label>
+        <input type="password" id="senha" name="senha" required> 
+        <br>
+
         <p>Observações: </p>
         <textarea name="obs" rows="3" cols="50"></textarea>
 
         <br>
-
-        <label for="rfid">Cartão RFID: </label>
-        <!--
-        <select name="rfid" id="rfid" form="autorizacaoForm" >
-            {% for rfid in arr_rfid %}
-                <option value="{{rfid.Rfid}}" >{{rfid.Rfid}}</option>
-            {% endfor %}
-        </select>
-        -->
-        <input type="text" name="rfid">
-
-        <br><br>
-
+        <br>
         {{ submit("Adicionar") }}
     {% endblock %}
